[gd_scene load_steps=30 format=3 uid="uid://cx3iwks1vifwf"]

[ext_resource type="Texture2D" uid="uid://dvcc0hituhrru" path="res://Archivos/Enemigos/Esqueletos/Esqueleto_Medio/Esqueleto_Medio_Sprite_Sheet.png" id="1_j6h1h"]
[ext_resource type="Script" path="res://Archivos/Enemigos/Esqueletos/Esqueleto_Medio/Esqueleto_Medio.gd" id="1_x8e0q"]
[ext_resource type="PackedScene" uid="uid://pxkqxgdbswcu" path="res://Archivos/Generales/Estadisticas.tscn" id="2_f0m2e"]
[ext_resource type="PackedScene" uid="uid://dieu2w7b2qxlb" path="res://Archivos/Generales/Cajas_Colision/Caja_Lesion.tscn" id="3_5x7k4"]
[ext_resource type="PackedScene" uid="uid://qhkw83hg7dby" path="res://Archivos/Generales/Cajas_Colision/Caja_Golpe.tscn" id="4_tvfeg"]
[ext_resource type="PackedScene" uid="uid://bjf855h26o70t" path="res://Archivos/Generales/Cajas_Colision/Zona_Detectar.tscn" id="6_rolf2"]
[ext_resource type="PackedScene" uid="uid://csltsi64ljcr5" path="res://Archivos/Generales/Cajas_Colision/Colision_Suave.tscn" id="7_01mkj"]
[ext_resource type="Texture2D" uid="uid://bj3qs8wasrh0l" path="res://Archivos/Sombra/Sombra_Sprite_Sheet.png" id="8_bjlev"]
[ext_resource type="AudioStream" uid="uid://wud7ctty43se" path="res://Archivos/Musica/Efectos/Esqueleto_Arrastrandose.wav" id="9_mfes6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fxy86"]
radius = 3.0
height = 12.0

[sub_resource type="Animation" id="Animation_gupio"]
resource_name = "Arrastrar_Abajo"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Esqueleto_Medio:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sombra:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sombra:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Arrastrarse:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xont6"]
resource_name = "Arrastrar_Arriba"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Esqueleto_Medio:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sombra:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sombra:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Arrastrarse:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vc4h0"]
resource_name = "Arrastrar_Derecha"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Esqueleto_Medio:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sombra:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sombra:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Arrastrarse:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mxum6"]
resource_name = "Arrastrar_Izquierda"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Esqueleto_Medio:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sombra:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sombra:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Arrastrarse:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1brex"]
resource_name = "Inactivo"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Esqueleto_Medio:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sombra:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sombra:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6s1e"]
_data = {
"Arrastrar_Abajo": SubResource("Animation_gupio"),
"Arrastrar_Arriba": SubResource("Animation_xont6"),
"Arrastrar_Derecha": SubResource("Animation_vc4h0"),
"Arrastrar_Izquierda": SubResource("Animation_mxum6"),
"Inactivo": SubResource("Animation_1brex")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_82meg"]
animation = &"Arrastrar_Abajo"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5ir1g"]
animation = &"Arrastrar_Arriba"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rht0d"]
animation = &"Arrastrar_Izquierda"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a0x2s"]
animation = &"Arrastrar_Derecha"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_nhh2g"]
blend_point_0/node = SubResource("AnimationNodeAnimation_82meg")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_5ir1g")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_rht0d")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_a0x2s")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_853gj"]
animation = &"Inactivo"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ipgt0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_sctxt"]
states/Arrastrar/node = SubResource("AnimationNodeBlendSpace2D_nhh2g")
states/Arrastrar/position = Vector2(521, 100)
states/End/position = Vector2(718, 100)
states/Inactivo/node = SubResource("AnimationNodeAnimation_853gj")
states/Inactivo/position = Vector2(364, 100)
transitions = ["Start", "Inactivo", SubResource("AnimationNodeStateMachineTransition_ipgt0")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_7pv7e"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jhfi4"]
radius = 2.56757
height = 11.6679

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ulfcd"]
radius = 5.34437
height = 17.0701

[sub_resource type="CircleShape2D" id="CircleShape2D_7algs"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d3ync"]
radius = 60.0083

[node name="Esqueleto_Medio" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 16
collision_mask = 257
script = ExtResource("1_x8e0q")

[node name="Esqueleto_Medio" type="Sprite2D" parent="."]
texture = ExtResource("1_j6h1h")
hframes = 21
frame = 11

[node name="Sombra" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1, 2)
texture = ExtResource("8_bjlev")
hframes = 8
frame = 5

[node name="Esqueleto_Colision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 13)
rotation = 4.71239
shape = SubResource("CapsuleShape2D_fxy86")

[node name="Esqueleto_Ani_Player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n6s1e")
}

[node name="Esqueleto_Tree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_sctxt")
anim_player = NodePath("../Esqueleto_Ani_Player")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_7pv7e")
parameters/Arrastrar/blend_position = Vector2(0.0144, -0.0725275)

[node name="Estadisticas" parent="." instance=ExtResource("2_f0m2e")]

[node name="Areas" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Caja_Golpe" parent="Areas" instance=ExtResource("4_tvfeg")]
collision_layer = 4
Golpe = 1.0

[node name="CollisionShape2D" parent="Areas/Caja_Golpe" index="0"]
position = Vector2(-0.208946, 12.9098)
rotation = 4.71239
shape = SubResource("CapsuleShape2D_jhfi4")
debug_color = Color(0.6, 0.00392157, 0.823529, 0.419608)

[node name="Caja_Lesion" parent="Areas" instance=ExtResource("3_5x7k4")]
collision_layer = 16
collision_mask = 8
Astillas = true

[node name="CollisionShape2D" parent="Areas/Caja_Lesion" index="0"]
position = Vector2(0, 13)
rotation = 4.71239
shape = SubResource("CapsuleShape2D_ulfcd")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Coliision_Sauve" parent="Areas" instance=ExtResource("7_01mkj")]

[node name="CollisionShape2D" parent="Areas/Coliision_Sauve" index="0"]
position = Vector2(0, 11)
shape = SubResource("CircleShape2D_7algs")

[node name="Zona_Detectar" parent="Areas" instance=ExtResource("6_rolf2")]
visible = false
collision_mask = 2

[node name="CollisionShape2D" parent="Areas/Zona_Detectar" index="0"]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_d3ync")
debug_color = Color(0, 1, 0, 0.419608)

[node name="Temporizadores" type="Timer" parent="."]

[node name="Color" type="Timer" parent="Temporizadores"]

[node name="Arrastrarse" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_mfes6")
volume_db = -5.0
bus = &"Efectos"

[connection signal="Sin_Vida" from="Estadisticas" to="." method="_on_estadisticas_sin_vida"]
[connection signal="area_entered" from="Areas/Caja_Lesion" to="." method="_on_caja_lesion_area_entered"]

[editable path="Areas/Caja_Golpe"]
[editable path="Areas/Caja_Lesion"]
[editable path="Areas/Coliision_Sauve"]
[editable path="Areas/Zona_Detectar"]
